--- a/python/csv_writer.ipynb
+++ b/python/csv_writer.ipynb
@@ -2,12 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "import os"
+    "import os\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def create_csv_int_file(numRows):\n",
+    "    \n",
+    "    start_ts = time.time()\n",
+    "\n",
+    "    home_dir = os.path.expanduser(\"~\")\n",
+    "    f_path = \"{0}/test_dummy_data/python/test_data.csv\".format(home_dir)\n",
+    "    buffer_size = 65536\n",
+    "    with open(f_path, 'w', newline='\\n', buffering=buffer_size) as csvfile:\n",
+    "            csv_writer = csv.writer(csvfile)\n",
+    "\n",
+    "            for i in range(1,numRows+1):\n",
+    "                csv_writer.writerow([i])\n",
+    "\n",
+    "    end_ts = time.time()\n",
+    "\n",
+    "    elapsed_time = round(end_ts - start_ts,2)\n",
+    "\n",
+    "    msg = \"Wrote {0} rows in {1} seconds\".format('{:,}'.format(numRows),elapsed_time)\n",
+    "\n",
+    "    print(msg)\n"
    ]
   },
   {
@@ -16,26 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def create_csv_int_file(numRows):\n",
-    "    \n",
-    "    home_dir = os.path.expanduser(\"~\")\n",
-    "    f_path = \"{0}/test_dummy_data/python/test_data.csv\".format(home_dir)\n",
-    "\n",
-    "    with open(f_path, 'w', newline='\\n') as csvfile:\n",
-    "            csv_writer = csv.writer(csvfile)\n",
-    "\n",
-    "            for i in range(1,numRows+1):\n",
-    "                csv_writer.writerow([i])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_csv_int_file(100000000)"
+    "create_csv_int_file(1000000000)"
    ]
   }
  ],
