--- a/python/csv_writer.ipynb
+++ b/python/csv_writer.ipynb
@@ -13,18 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def create_csv_int_file(numRows):\n",
+    "def create_csv_int_file(numRows, buffer_size):\n",
     "    \n",
     "    start_ts = time.time()\n",
     "\n",
     "    home_dir = os.path.expanduser(\"~\")\n",
     "    f_path = \"{0}/test_dummy_data/python/test_data.csv\".format(home_dir)\n",
-    "    buffer_size = 65536\n",
     "    with open(f_path, 'w', newline='\\n', buffering=buffer_size) as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
     "\n",
@@ -42,11 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote 100,000,000 rows in 19.24 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "create_csv_int_file(1000000000)"
+    "create_csv_int_file(100000000, 1024 * 1024*10)"
    ]
   }
  ],
