--- a/python/csv_writer.ipynb
+++ b/python/csv_writer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote 100,000,000 rows in 19.24 seconds\n"
+      "Wrote 10,000,000 rows in 1.84 seconds\n"
      ]
     }
    ],
    "source": [
-    "create_csv_int_file(100000000, 1024 * 1024*10)"
+    "create_csv_int_file(10000000, 1024 * 1024*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_csv_int_file_v2(numRows, buffer_size):\n",
+    "    \n",
+    "    start_ts = time.time()\n",
+    "\n",
+    "    home_dir = os.path.expanduser(\"~\")\n",
+    "    f_path = \"{0}/test_dummy_data/python/test_data.csv\".format(home_dir)\n",
+    "    with open(f_path, 'w', newline='\\n', buffering=buffer_size) as csvfile:\n",
+    "            csv_writer = csv.writer(csvfile)\n",
+    "\n",
+    "            rows = [i for i in range(1,numRows+1)]\n",
+    "            csv_writer.writerows(zip(rows))\n",
+    "\n",
+    "    end_ts = time.time()\n",
+    "\n",
+    "    elapsed_time = round(end_ts - start_ts,2)\n",
+    "\n",
+    "    msg = \"Wrote {0} rows in {1} seconds\".format('{:,}'.format(numRows),elapsed_time)\n",
+    "\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote 10,000,000 rows in 1.68 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_csv_int_file_v2(10000000, 1024 * 1024*100)"
    ]
   }
  ],
