--- a/python/csv_writer.ipynb
+++ b/python/csv_writer.ipynb
@@ -8,7 +8,29 @@
    "source": [
     "import csv\n",
     "import os\n",
-    "import time"
+    "import time\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthewmartin/dream_machine/python/.venv/lib/python3.11/site-packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "import site\n",
+    "site_packages_directory = site.getsitepackages()[0]\n",
+    "print(site_packages_directory)\n",
+    "#/opt/homebrew/opt/python@3.11/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages\n",
+    "#/Users/matthewmartin/dream_machine/python/.venv/lib/python3.11/site-packages"
    ]
   },
   {
