--- a/python/postgres/pg_test.ipynb
+++ b/python/postgres/pg_test.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "#%pip install sqlalchemy\n",
-    "#%pip install psycopg2-binary"
+    "#%pip install psycopg2-binary\n",
+    "#%pip install prettytable\n",
+    "\n",
+    "## next steps, work on dbeaver with this stuff"
    ]
   },
   {
@@ -26,21 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMKeyView(['person_id', 'person_nm'])\n",
-      "(1, 'matt martin')\n",
-      "(2, 'Erin Martin')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sqlalchemy import create_engine, text\n",
+    "from prettytable import PrettyTable\n",
     "\n",
     "engine = create_engine(get_cn_str())\n",
     "\n",
@@ -54,12 +48,20 @@
     "# Get the column names\n",
     "columns = result.keys()\n",
     "\n",
-    "# Print the column names\n",
-    "print(columns)\n",
+    "# Create a PrettyTable instance and set the field names (headers)\n",
+    "table = PrettyTable(columns)\n",
     "\n",
-    "# Process the rows\n",
+    "# Add the rows to the table\n",
     "for row in rows:\n",
-    "    print(row)\n"
+    "    table.add_row(row)\n",
+    "\n",
+    "# Set the style of the table (optional)\n",
+    "table.border = True\n",
+    "table.header = True\n",
+    "\n",
+    "# Print the table\n",
+    "print(table)\n",
+    "\n"
    ]
   }
  ],
