--- a/python/postgres/pg_test.ipynb
+++ b/python/postgres/pg_test.ipynb
@@ -8,21 +8,19 @@
    "source": [
     "#%pip install sqlalchemy\n",
     "#%pip install psycopg2-binary\n",
-    "#%pip install prettytable\n",
-    "\n",
-    "## next steps, work on dbeaver with this stuff"
+    "#%pip install prettytable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_cn_str():\n",
     "    import os\n",
     "\n",
-    "    file_path = os.path.expanduser('~/misc/pgcn.txt')\n",
+    "    file_path = os.path.expanduser('~/misc/pgcn1.txt')\n",
     "    with open(file_path, 'r') as file:\n",
     "        return file.read()\n"
    ]
@@ -36,32 +34,68 @@
     "from sqlalchemy import create_engine, text\n",
     "from prettytable import PrettyTable\n",
     "\n",
-    "engine = create_engine(get_cn_str())\n",
+    "engine = create_engine(\"postgresql://localhost/testdb1\")\n",
     "\n",
-    "sql = text(\"select * from test_sch1.ppl\")\n",
+    "sql = text(\"select current_user\")\n",
     "\n",
     "# Execute the SQL statement\n",
     "with engine.connect() as connection:\n",
     "    result = connection.execute(sql)\n",
-    "    rows = result.fetchall()\n",
+    "    \n",
+    "    try:\n",
+    "        rows = result.fetchall()\n",
+    "    except:\n",
+    "        rows = None\n",
     "\n",
-    "# Get the column names\n",
-    "columns = result.keys()\n",
+    "if rows:\n",
     "\n",
-    "# Create a PrettyTable instance and set the field names (headers)\n",
-    "table = PrettyTable(columns)\n",
+    "    # Get the column names\n",
+    "    columns = result.keys()\n",
     "\n",
-    "# Add the rows to the table\n",
-    "for row in rows:\n",
-    "    table.add_row(row)\n",
+    "    # Create a PrettyTable instance and set the field names (headers)\n",
+    "    table = PrettyTable(columns)\n",
     "\n",
-    "# Set the style of the table (optional)\n",
-    "table.border = True\n",
-    "table.header = True\n",
+    "    # Add the rows to the table\n",
+    "    for row in rows:\n",
+    "        table.add_row(row)\n",
     "\n",
-    "# Print the table\n",
-    "print(table)\n",
-    "\n"
+    "    # Set the style of the table (optional)\n",
+    "    table.border = True\n",
+    "    table.header = True\n",
+    "\n",
+    "    # Print the table\n",
+    "    print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine(\"postgresql://localhost/testdb1\")\n",
+    "sql = text(\"\"\"create table test_sch1.authors4 (author_id int, author_name varchar(250))\"\"\")\n",
+    "\n",
+    "with engine.connect() as cn:\n",
+    "    cn.execute(sql)\n",
+    "    cn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "sql = \"create table test_sch1.authors7 (author_id int, author_name varchar(250))\"\n",
+    "\n",
+    "with psycopg2.connect(host=\"localhost\", database=\"testdb1\") as cn:\n",
+    "    with cn.cursor() as cur:\n",
+    "        cur.execute(sql)\n",
+    "        cn.commit()"
    ]
   }
  ],
