--- a/python/bq/test_gbq.ipynb
+++ b/python/bq/test_gbq.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,30 +134,29 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "table_ref = client.dataset(dataset_id).table(table_name)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LoadJob<project=test-matt-219200, location=US, id=a1ad34cd-3cd8-4957-bfde-f7798cf49c44>"
+       "LoadJob<project=test-matt-219200, location=US, id=9f0b7b62-063d-40f7-b152-b5e95c8b05cf>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#loads CSV to table\n",
-    "job = client.load_table_from_dataframe(df, table_ref)\n",
-    "job.result()  # Wait for the job to complete"
+    "table_ref = client.dataset(dataset_id).table(table_name)\n",
+    "client.load_table_from_dataframe(df, table_ref).result()\n",
+    "#job.result()  # Wait for the job to complete"
    ]
   },
   {
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -242,16 +241,16 @@
        "4        5       Don"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = f'SELECT DISTINCT * FROM `ds1_test.users2` LIMIT 10'\n",
+    "query = f'SELECT * FROM `ds1_test.users2` LIMIT 10'\n",
     "\n",
     "df = pd.read_gbq(query)\n",
-    "df.head()\n",
+    "df.head(5)\n",
     "\n"
    ]
   }
